kubernetes/api/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - env:
            - name: PORT
              value: "3000"
            - name: DB_HOST
              value: postgres
            - name: DB_PORT
              value: "5432"
            - name: DB_DATABASE
              value: postgres-db
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: api
                  key: db_username
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: api
                  key: db_password
          name: api
          image: lunafire/nodejs-api:1.0
          ports:
            - containerPort: 3000
          resources:
              limits: 
                  cpu: 500m
              requests: 
                  cpu: 200m
      restartPolicy: Always
